移除无用包