@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -44,8 +44,4 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-    jvmArgs += [
-            '-Djdk.instrument.traceUsage',
-            '-XX:+EnableDynamicAgentLoading'
-    ]
 }
